# TwoPhaseFerrofluidFlow

./: .gitignore  README.md
AppliedMagnetizingField/: CMakeLists.txt
AppliedMagnetizingField/config/: testDipoles1.txt
AppliedMagnetizingField/include/: AppliedMagnetizingField.h
AppliedMagnetizingField/src/: AppliedMagnetizingField.cc
Examples/step-1/: grid-1.eps  grid-2.eps  step-1  step-1.cc
Examples/step-12/: CMakeLists.txt  grid-0.eps  grid-1.eps  grid-2.eps  grid-3.eps  grid-4.eps  grid-5.eps  sol-0.gnuplot  sol-1.gnuplot  sol-2.gnuplot  sol-3.gnuplot  sol-4.gnuplot  sol-5.gnuplot  step-12.cc  step-12.h
Examples/step-2/: sparsity_pattern_1  sparsity_pattern_2  step-2  step-2.cc
Examples/step-20/: CMakeLists.txt  solution.vtu  step-20.cc  step-20.h
Examples/step-26/: CMakeLists.txt  step-26.cc  step-26.h
Examples/step-3/: CMakeLists.txt  solution.vtk  step-3.cc  step-3.h
Examples/step-4/: CMakeLists.txt  solution-2d.vtk  solution-3d.vtk  step-4.cc  step-4.h
Examples/step-5/: CMakeLists.txt  solution-0.gpl  solution-1.gpl  solution-2.gpl  solution-3.gpl  solution-4.gpl  solution-5.gpl  step-5.cc  step-5.h
Examples/step-6/: CMakeLists.txt  grid-0.eps  (+17 more)
MainSource/: CMakeLists.txt
Mesh/: CMakeLists.txt
testing/: CHconvergence.tex  CHerror.tex  CMakeLists.txt  NSconvergence.tex  NSerror.tex
testing/inc/: CahnHilliardUnitTest1.h  CahnHilliardUnitTest2.h  CahnHilliardUnitTest3.h  NavierStokesEquation.h
testing/src/: CahnHilliardUnitTest1.cpp  CahnHilliardUnitTest2.cpp  CahnHilliardUnitTest3.cpp  NavierStokesEquation.cpp  UnitTesting.cpp
(+124 files in other folders)
